CSS: Prevent jsGrid tables from showing un-necessary scrollbars

--- a/contrib/monitor/css/eddn.css
+++ b/contrib/monitor/css/eddn.css
@@ -25,3 +25,8 @@ footer .navbar-default {
 }
     
 .highcharts-container{width:100% !important; height:100% !important;}
+
+.jsgrid-grid-header,
+.jsgrid-grid-body{
+	  overflow: auto;
+}
